# dpasca-sdl2-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_externals.sh  get_externals.sh  make_screenshots.sh
Apps/Common/: ImmGL.cpp  ImmGL.h  MathBase.h  MinimalSDLApp.cpp  MinimalSDLApp.h
Apps/Demo1/: CMakeLists.txt
Apps/Demo1/src/: main.cpp
Apps/Demo2/: CMakeLists.txt
Apps/Demo2/src/: main.cpp
Apps/Demo3/: CMakeLists.txt
Apps/Demo3/src/: main.cpp
Apps/Demo4/: CMakeLists.txt
Apps/Demo4/src/: main.cpp
Apps/Demo5/: CMakeLists.txt
Apps/Demo5/src/: main.cpp
Apps/Demo6/: CMakeLists.txt
Apps/Demo6/src/: MathBase.h  Voxel.cpp  Voxel.h  Voxels.cpp  Voxels.h  VoxelsGen.h  main.cpp
Apps/Demo7/: CMakeLists.txt
Apps/Demo7/src/: HMapParallelOcclChecker.h  MU_ParallelOcclChecker.h  MU_WrapMap.h  MathBase.h  Plasma2.cpp  Plasma2.h  RendBase.h  Terrain.h  TerrainExport.h  TerrainGen.h  WrapMap.h  main.cpp
Apps/Demo8/: CMakeLists.txt
Apps/Demo8/src/: main.cpp
Apps/Demo9/: CMakeLists.txt  Simulation.h
Apps/Demo9/src/: CS_Brain.cpp  CS_Brain.h  CS_BrainBase.h  CS_Chromo.h  CS_M1_Brain.cpp  CS_M1_Brain.h  CS_M1_Train.h  CS_M1_Types.h  CS_Math.h  CS_ModelFactory.cpp  CS_ModelFactory.h  CS_Train.h  CS_TrainBase.h  CS_Trainer.h  Simulation.h  main.cpp
Common/: CMakeLists.txt
Common/src/: DBase.h  ImmGL.cpp  ImmGL.h  IncludeGL.h  MinimalSDLApp.cpp  MinimalSDLApp.h
